--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 </tr>
 
 </table>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148580205-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-148580205-1');
+</script>
 <script src="./index.js"></script>
 
 </body>
